--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
